<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- 以下文字是需要定制修改的 -->

    <string name="app_name">智能E房</string>
	<string name="welcome">欢迎来到智能E房系统,欢迎欢迎，热烈欢迎</string>
	
<!-- 以上文字需要修改的 -->
    
    <string name="language_title">标题</string>
	<string name="language_discription">描述</string>
	<string name="language_sel">选择语言</string>
	<string name="chg_lang">改变语言</string>
	<string name="fuction1">酒店介绍</string>
	<string name="fuction2">周边信息</string>
	<string name="fuction3">餐饮服务</string>
	<string name="fuction4">影音视听</string>
	<string name="fuction5">精彩应用</string>
	<string name="fuction6">游   戏</string>
	<string name="home">返回主界面</string>
	
	    
	<!-- below string for manager UI -->
	<string name="sys_fun_setting">系统设置</string>
	<string name="sys_fun_setting_dis">打开系统设置界面，可以设置网络</string>
	<string name="sys_fun_sort">管理应用分类</string>
	<string name="sys_fun_sort_dis">通过这里对安装的应用进行分类，对于的分类才会在界面上显示</string>
	<string name="sys_fun_batinstall">批量安装</string>
	<string name="sys_fun_batinstall_dis">把你要安装的应用APK文件放到卡上，插入设备，然后再次进行安装</string>
	<string name="sys_fun_copy_machine">一键导入应用分类</string>
	<string name="sys_fun_copy_machine_dis">把你备份的sdcard插入设备，通过此功能一键设置应用分类</string>
	<string name="sys_fun_copy_sd">一键备份应用及分类</string>
	<string name="sys_fun_copy_sd_dis">对本机上的所有应用和分类都会被拷到sdcard卡上，请插好卡</string>
	<string name="sys_fun_set_room_num">一键定制系统</string>
	<string name="sys_fun_set_room_num_dis">在本机连接服务器的情况下，设置房间号，获取酒店标准图片、个性的声音</string>
	<string name="sys_fun_batuninstall">批量卸载</string>
	<string name="sys_fun_batuninstall_dis">批量卸载</string>
	<string name="sys_fun_openhome">进入默认系统</string>
	<string name="sys_fun_openhome_dis">进入默认系统，操作完成后，请重启！</string>
	<string name="sys_fun_custom">个性定制</string>
	<string name="sys_fun_custom_dis">可以定制是否开启演示模式</string>
	
	<string name="sys_fun_set_wallpaper">设置墙纸</string>
	<string name="sys_fun_set_wallpaper_dis">你可以定制个性化墙纸</string>
	
	    <string name="manager_setting">管理员设置</string>
	<string name="manager_setting_sort">分类管理</string>
	<string name="loadsortdatabasesuc">分类应用拷贝成功,需要重启才能生效！</string>
	<string name="loaderror">导入分类失败,请确保备份的SD卡已经插好</string>
	<string name="savesortdatabasesuc">备份分类应用成功</string>
	<string name="savesortdatabasefail">分类应用备份失败，请确认sdcard已经插入</string>
	<string name="saveerror">失败, 请确保sd卡插入,配置文件存在</string>
	<string name="waiting">等待</string>
	<string name="wait_info">正在备份数据,请稍等</string>
	<string name="all_app">全部应用</string>
	<string name="unsort_app">未分类应用</string>
	
	<string name="all_game">游戏</string>
	<string name="all_game_1">分类一</string>
	<string name="all_game_2">分类二</string>
	<string name="all_game_3">棋牌</string>
	<string name="all_game_4">冒险</string>
	<string name="all_game_5">射击</string>

	<string name="all_commerce">应用</string>
	<string name="all_commerce_1">应用一</string>
	<string name="all_commerce_2">电邮</string>
	<string name="all_commerce_3">办公</string>
	<string name="all_commerce_4">社交</string>
	<string name="all_commerce_5">股票</string>
	
	<string name="all_tool">工具</string>
	<string name="all_tool_1">管理员助手</string>
	
	<string name="sort_app">应用分类到</string>
	<string name="up_one_level">.(返回上一级目录)</string>
	<string name="current_dir">.(刷新)</string>
	<string name="sort_app_del">删除</string>
	<string name="sort_app_del_tip">是否在该分类删除此应用</string>
	<string name="dialog_title">重要提示</string>
	<string name="dialog_ok">确定</string>
	<string name="dialog_cancel">取消</string>
	<string name="begin_copy_app">你确定要开始备份您安装的所有应用吗？这可能需要十几分钟</string>
	<string name="be_sort">已经被分类到------%1$s,%2$s</string>
	<string name="input">请输入密码:</string>
	<string name="show_psw">显示密码</string>
	<string name="login_title">管理员登陆</string>
	<string name="login">登录</string>
	<string name="Change_password">Change Password</string>
	<string name="passworderror">密码错误</string>
	<string name="no_activity_find">无法打开，确定安装完整</string>
	<string name="find_card_mount">发现存储设备插入</string>
	<string name="find_card_umount">发现存储设备拔出</string>
	<string name="loading">Loading</string>
	<string name="menu_wallpaper">设置墙纸</string>
	<string name="set_wallpaper_succuss">设置墙纸成功</string>
	
	<string name="wallpaper_instructions">选择图片来设置背景</string>
	<string name="sava_file_suc">保存成文件成功</string>
	<string name="import_file_suc">导入配置文件成功</string>
	<string name="loading_video">Loading</string>
	
	<string name="default_descri">
	<![CDATA["缺省说明：这里显示图文说明,可以编辑你对APK<font size="50" color="red"><b>%1$s</b></font> 的说明"]]>
	</string>

	<string name="app_name_movies">酒店专用高清播放器</string>
	<string name="play_error">播放错误!</string>
	<string name="play_original">原始大小</string>
	<string name="play_scale_stretch">比例拉伸</string>
	<string name="play_stretch_to_fullscreen">拉伸到屏幕尺寸</string>
	
</resources>
