<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:id="@+id/tipsinfo"
    android:text="@string/sort_app_del_tip"
    />
    
	<LinearLayout
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="5px"
	    android:gravity="center"
	>
		<Button
			android:id="@+id/button_id_ok"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:text="@string/dialog_ok"
		/>
		<Button
			android:id="@+id/button_id_cancel"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:text="@string/dialog_cancel"
		/>
		
	</LinearLayout>
</LinearLayout>
