<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- android:background="@drawable/bg_home" -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
		<LinearLayout
			android:name="@+id/logoname"
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical">
			<Button
	            android:id="@+id/logo"
	            android:layout_width="@dimen/logo_width"
	            android:layout_height="@dimen/logo_height"            
	            android:background="@drawable/logo"
	            android:focusable="false"
	            android:layout_gravity="center_horizontal"
	            android:text="" />
            <TextView android:id="@+id/welcome"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"		
				android:textSize="@dimen/welcome_font_size"
				android:maxLines="1"
				android:gravity="center"
				android:text="@string/welcome"
				android:textColor="@color/welcome_text_color">
			</TextView>
		</LinearLayout>
        

        <Button
            android:id="@+id/chglang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/lang_margin_r"
            android:layout_marginTop="@dimen/lang_margin_t"
            android:background="@drawable/menu_bg"
            android:padding="@dimen/lang_padding"
            android:text="@string/chg_lang"
            android:textColor="@color/welcome_button_text_color" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" >

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            android:visibility="invisible" >
        </Button>

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/menu_width"
            android:layout_height="@dimen/menu_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/menu_bg"
            android:padding="@dimen/menu_padding"
            android:text="@string/fuction1"
            android:textColor="@color/welcome_button_text_color" >
        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/menu_width"
            android:layout_height="@dimen/menu_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/menu_bg"
            android:padding="@dimen/menu_padding"
            android:text="@string/fuction2"
            android:textColor="@color/welcome_button_text_color" >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/menu_width"
            android:layout_height="@dimen/menu_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/menu_bg"
            android:padding="@dimen/menu_padding"
            android:text="@string/fuction3"
            android:textColor="@color/welcome_button_text_color" >
        </Button>

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/menu_width"
            android:layout_height="@dimen/menu_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/menu_bg"
            android:padding="@dimen/menu_padding"
            android:text="@string/fuction4"
            android:textColor="@color/welcome_button_text_color" >
        </Button>

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/menu_width"
            android:layout_height="@dimen/menu_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/menu_bg"
            android:padding="@dimen/menu_padding"
            android:text="@string/fuction5"
            android:textColor="@color/welcome_button_text_color" >
        </Button>

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/menu_width"
            android:layout_height="@dimen/menu_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/menu_bg"
            android:gravity="center"
            android:text="@string/fuction6"
            android:textColor="@color/welcome_button_text_color" >
        </Button>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            android:visibility="invisible" >
        </Button>
    </LinearLayout>

</LinearLayout>